operator control panel: added support to change channel

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ operator-name-cbs-widget (0.2) unstable; urgency=low
   * Ignore cell name if starts with @@@@@
   * Fixed problem when sometime operator name is not shown
   * Fixed problem with upgrading, removing and purging package
+  * Added support to change cell broadcast channel
 
  -- Pali Rohár <pali.rohar@gmail.com>  Wed, 04 Apr 2012 14:59:40 +0200
 
