--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+operator-name-cbs-widget (3.0) unstable; urgency=low
+
+  * Rename deb package to connui-home-cellular which is name of original deb package
+  * Increase version to replace orignal connui-home-cellular
+  * Fix problem that custom-operator-name-applet is not possible to install
+  * Remove debug log buttons from control panel plugin (enabling logs via gconf still working)
+  * Remove postrm and preinst scripts which are not needed
+
+ -- Pali Rohár <pali.rohar@gmail.com>  Thu, 05 Jul 2012 16:39:48 +0200
+
 operator-name-cbs-widget (0.2) unstable; urgency=low
 
   * Ignore cell name if starts with @@@@@
