--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ connui-home-cellular (3.2.1) unstable; urgency=low
   * Correct typo in calculation of operator name
   * Use service provider name when service_provider_name_type is != 1
 
- -- Jonathan Wilson <jfwfreo@tpgi.com.au>  Thu, 03 2013 10:57:21 +0100
+ -- Jonathan Wilson <jfwfreo@tpgi.com.au>  Thu, 03 Jan 2013 10:57:21 +0100
 
 connui-home-cellular (3.2) unstable; urgency=low
 
